--- a/app/src/main/res/layout/activity_detailtype.xml
+++ b/app/src/main/res/layout/activity_detailtype.xml
@@ -40,7 +40,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom" >
-
+        <com.kakao.adfit.publisher.AdView
+            android:id="@+id/adview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
     </LinearLayout>
 <ImageView
         android:id="@+id/vv"
